<resources>
    <string name="app_name">SSH</string>
    <string name="title_home">My Home</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_settings">Settings</string>
    <string name="placeholder">...</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="title_basket">BASKET</string>
    <string name="close">Close Basket</string>
    <string name="checkout">CHECKOUT</string>
    <string name="empty_basket_title">Your basket is empty</string>
    <string name="empty_basket_message">Add some items to your basket and they will appear here…</string>
    <string name="added_by">Added by</string>
    <string name="in_stock">In stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_total">Your total:</string>
    <string name="order_total">Order total:</string>
</resources>