<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="5dp"
        android:weightSum="2"
        android:id="@+id/topPanel"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/titleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:text="@string/title_basket" />

        <Button
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/backBtn"
            android:text="@string/close"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/topPanel"
        android:layout_above="@id/checkoutLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackBarLayout"
        android:layout_below="@id/topPanel"
        android:layout_above="@id/checkoutLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/checkoutLayout"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/your_total"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/userTotalView"
                android:text="@string/placeholder"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/order_total"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/orderTotalView"
                android:text="@string/placeholder"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/checkoutBtn"
            android:text="@string/checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/emptyBasketView"
        android:padding="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/myrect"
        android:elevation="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="21sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:maxWidth="250dp"
            android:text="@string/empty_basket_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxWidth="250dp"
            android:text="@string/empty_basket_message" />
        
    </LinearLayout>

</RelativeLayout>